[tool.poetry]
name = "eclipse-cyclonedds.github.io"
version = "0.1.0"
description = ""
authors = ["Eclipse Cyclone DDS committers"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
